# chain-poll-eval

./: .gitignore  pyproject.toml
data/: report-raw-drop-multiple-calls.csv  report-raw-drop.csv
data/reports/: report-docs-drop-multi-calls-questions.csv  report-docs-hotpot-multi-calls-questions.csv  report-docs-msmarco-multi-calls-questions.csv  report-raw-hotpot-multi-calls-questions.csv  report-refresh-rplus-docs-drop-multi-calls-questions.csv  report-refresh-rplus-docs-hotpot-multi-calls-questions.csv
data/runs/: run_2024-08-20_00-38-40.jsonl  run_multiple_calls_doc_drop_questions.jsonl  run_multiple_calls_raw.jsonl  run_multiple_calls_raw_drop_questions.jsonl  run_refresh_rplus_multiple_calls_docs_drop_questions.jsonl  run_single_calls_raw.jsonl  test.jsonl
notebooks/: 0-eval-chain-poll-cmd.ipynb  0-eval-chain-poll-oai-sample-output.txt  0-eval-chain-poll-oai.ipynb  0-eval-chain-poll.ipynb  1-eval-chain-poll-oai-output-gpt3.5t.txt  1-eval-chain-poll-oai-output-gpt4o.txt  1-eval-chain-poll-oai-output-gpt4t.txt  1-eval-chain-poll-oai.ipynb  1-test-chain-poll-oai.ipynb  2-eval-chain-poll.ipynb  3-report-pulls.ipynb
src/: base.py  chain_poll.py  constants.py
