[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Neel Gokhale <neel@cohere.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cohere = "^5.8.0"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"
ipykernel = "^6.29.5"
ragas = "^0.1.14"
datasets = "^2.21.0"
langchain-cohere = "^0.2.2"
langchain-openai = "^0.1.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
